--- a/index.html
+++ b/index.html
@@ -1,1 +1,24 @@
-<a href="https://t.me/tightpussies"><h1>тесные киски</h1></a>
+<!DOCTYPE html>
+<html lang="ru">
+
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <meta name="description" content="киски в тесных местах.">
+  <link href="https://fonts.googleapis.com/css?family=Roboto+Condensed:700i|Roboto:400,400i,900,900i&amp;subset=cyrillic,cyrillic-ext" rel="stylesheet">
+  <link rel="stylesheet" href="main.css" type="text/css">
+  <title>тесные киски</title>
+</head>
+<style>
+  body {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+</style>
+<body>
+  <a href="https://t.me/tightpussies"><h1>тесные киски</h1></a>
+</body>
+  
+</html>
