--- a/index.html
+++ b/index.html
@@ -11,10 +11,14 @@
   <title>тесные киски</title>
 </head>
 <style>
+  html {
+    height: 100%;
+  }
   body {
     display: flex;
     justify-content: center;
     align-items: center;
+    min-height: 100%;
   }
 </style>
 <body>
