--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
   <link href="https://fonts.googleapis.com/css?family=Roboto+Condensed:700i|Roboto:400,400i,900,900i&amp;subset=cyrillic,cyrillic-ext" rel="stylesheet">
   <link rel="stylesheet" href="main.css" type="text/css">
   <title>тесные киски</title>
-</head>
-<style>
+  
+  <style>
   html {
     height: 100%;
   }
@@ -18,9 +18,12 @@
     display: flex;
     justify-content: center;
     align-items: center;
+    margin: 0;
     min-height: 100%;
   }
 </style>
+</head>
+
 <body>
   <a href="https://t.me/tightpussies"><h1>тесные киски</h1></a>
 </body>
