--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <meta name="description" content="киски в тесных местах.">
+  <meta name="google-site-verification" content="dmRyVu_kh2XFthoo1NI3hys3-FW7P-Du1Pe7RSb2StU" />
   <meta name="yandex-verification" content="33f93dc546454ba2" />
   <link href="https://fonts.googleapis.com/css?family=Roboto+Condensed:700i|Roboto:400,400i,900,900i&amp;subset=cyrillic,cyrillic-ext" rel="stylesheet">
   <link rel="stylesheet" href="main.css" type="text/css">
