--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
     min-height: 100%;
   }
   h1 { margin: 0; }
+  .cat svg { transition: transform 0.3s; }
   .cat:hover svg { transform: scale(1.3); }
 </style>
 </head>
