--- a/index.html
+++ b/index.html
@@ -30,7 +30,8 @@
   .cat-message { 
     animation-fill-mode: forwards;
     animation-name: message;
-    animation-duration: 1.5s;
+    animation-duration: 2s;
+    animation-delay: 4s;
     animation-timing-function: ease;
   }
     
