--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
   .cat svg { transition: transform 0.3s; }
   .cat:hover svg { transform: scale(1.3); }
   .cat-message { 
+    opacity: 0;
     animation-fill-mode: forwards;
     animation-name: message;
     animation-duration: 2s;
