--- a/index.html
+++ b/index.html
@@ -8,8 +8,6 @@
   <meta name="description" content="киски в тесных местах.">
   <meta name="google-site-verification" content="dmRyVu_kh2XFthoo1NI3hys3-FW7P-Du1Pe7RSb2StU" />
   <meta name="yandex-verification" content="33f93dc546454ba2" />
-  <link href="https://fonts.googleapis.com/css?family=Roboto+Condensed:700i|Roboto:400,400i,900,900i&amp;subset=cyrillic,cyrillic-ext" rel="stylesheet">
-  <link rel="stylesheet" href="main.css" type="text/css">
   <title>тесные киски</title>
   
   <style>
@@ -24,8 +22,17 @@
     margin: 0;
     min-height: 100%;
   }
-  h1 { margin: 0; }
-  .cat svg { transition: transform 0.3s; }
+  h1 {
+    margin: 0;
+    font-size: 36px;
+    font-size: 5vw;
+    text-align: center;
+  }
+  .cat svg {
+    width: 8vw;
+    height: 8vh;
+    transition: transform 0.3s;
+  }
   .cat:hover svg { transform: scale(1.3); }
   .cat-message { 
     opacity: 0;
@@ -42,6 +49,16 @@
   60%   { transform: scale(1); opacity: 1; }
   100% { transform: scale(0); opacity: 0; }
 }
+    
+  @media screen and (max-width: 768px) {
+    h1 {
+      font-size: 36px;
+    }
+    .cat svg {
+      width: 45px;
+      height: 45px;
+    }
+  }
 </style>
 </head>
 
