--- a/index.html
+++ b/index.html
@@ -34,7 +34,8 @@
     transition: transform 0.3s;
   }
   .cat:hover svg { transform: scale(1.3); }
-  .cat-message { 
+  .cat-message {
+    text-align: center;
     opacity: 0;
     animation-fill-mode: forwards;
     animation-name: message;
@@ -63,8 +64,8 @@
 </head>
 
 <body>
-  <p class="cat-message">погладь меня, если не открывается</p>
-  <a class="cat" href="http://t-do.ru/tightpussies" title="погладь меня, если не открывается из-за блокировки">
+  <p class="cat-message">погладь меня, если не&nbsp;открывается</p>
+  <a class="cat" href="http://t-do.ru/tightpussies" title="погладь меня, если не&nbsp;открывается из-за блокировки">
     <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512" width="26" height="26">
       <path d="M460.174 0L348.855 79.894C319.996 66.873 288.469 60 256 60c-32.47 0-63.996 6.873-92.855 19.894L51.826 0H30v286c0 60.367 23.508 117.121 66.194 159.806C138.88 488.491 195.633 512 256 512s117.12-23.508 159.807-66.194C458.492 403.121 482 346.367 482 286V0h-21.826zM452 286c0 108.075-87.925 196-196 196S60 394.075 60 286V42.793l73.871 53.018A227.662 227.662 0 0 0 99.384 123.1l20.795 21.623C156.874 109.435 205.109 90 256 90s99.127 19.435 135.821 54.724l20.795-21.623a227.6 227.6 0 0 0-34.487-27.289L452 42.793V286z"/>
       <path d="M301 361c-16.542 0-30-13.458-30-30v-45h-30v45c0 16.542-13.458 30-30 30h-45v30h30v30h30v-31.899c11.792-3.046 22.178-9.606 30-18.479 7.822 8.873 18.208 15.432 30 18.479V421h30v-30h30v-30h-45zM138.5 226v30h45v30h30v-60zM298.5 226v60h30v-30h45v-30z"/>
