--- a/index.html
+++ b/index.html
@@ -20,6 +20,9 @@
   <meta name="google-site-verification" content="dmRyVu_kh2XFthoo1NI3hys3-FW7P-Du1Pe7RSb2StU" />
   <meta name="yandex-verification" content="33f93dc546454ba2" />
   <title>тесные киски</title>
+  <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
   
   <style>
   html {
