--- a/index.html
+++ b/index.html
@@ -22,39 +22,56 @@
     margin: 0;
     min-height: 100%;
   }
+  a {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
   h1 {
     margin: 0;
     font-size: 36px;
-    font-size: 5vw;
     text-align: center;
   }
-  .pussy-link { margin-bottom: 50px; }
-  .pussy svg {
-    width: 8vw;
-    height: 8vh;
-    transition: transform 0.3s;
+  .logo {
+    width: 20vw;
+    height: 20vh;
+    min-width: 200px;
+    min-height: 200px;
+    transition: transform 0.3s ease;
   }
-  .pussy:hover svg { transform: scale(1.3); }
-  @media screen and (max-width: 768px) {
+  @media screen and (min-width: 940px) {
     h1 {
-      font-size: 36px;
+      font-size: 5vw;
     }
-    .pussy svg {
-      width: 45px;
-      height: 45px;
+    .cat {
+      transform: translateY(60px);
+      transition: transform 0.3s ease;
+    }
+    a:hover .cat {
+      transform: translateY(0);
     }
   }
 </style>
 </head>
-
 <body>
-  <a class="pussy" href="https://tlinks.run/tightpussies">
-    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512" width="26" height="26">
-      <path d="M460.174 0L348.855 79.894C319.996 66.873 288.469 60 256 60c-32.47 0-63.996 6.873-92.855 19.894L51.826 0H30v286c0 60.367 23.508 117.121 66.194 159.806C138.88 488.491 195.633 512 256 512s117.12-23.508 159.807-66.194C458.492 403.121 482 346.367 482 286V0h-21.826zM452 286c0 108.075-87.925 196-196 196S60 394.075 60 286V42.793l73.871 53.018A227.662 227.662 0 0 0 99.384 123.1l20.795 21.623C156.874 109.435 205.109 90 256 90s99.127 19.435 135.821 54.724l20.795-21.623a227.6 227.6 0 0 0-34.487-27.289L452 42.793V286z"/>
-      <path d="M301 361c-16.542 0-30-13.458-30-30v-45h-30v45c0 16.542-13.458 30-30 30h-45v30h30v30h30v-31.899c11.792-3.046 22.178-9.606 30-18.479 7.822 8.873 18.208 15.432 30 18.479V421h30v-30h30v-30h-45zM138.5 226v30h45v30h30v-60zM298.5 226v60h30v-30h45v-30z"/>
+  <a href="https://tlinks.run/tightpussies">
+    <svg version="1.1" class="logo" xmlns="http://www.w3.org/2000/svg" x="0" y="0" viewBox="0 0 516 394.6" xml:space="preserve">
+      <style>
+        .st2{fill:none}.st4{fill:#1d1d1b}.st9,.cat{fill:#fff}
+      </style>
+      <path class="st9" d="M58.8 116.6l59 34.1 130.3-56.4L189 60.2zM274.8 94.3L405 150.7l59.1-34.1-130.3-56.4z"/>
+      <path d="M479.8 110.3L335.8 48c-1.7-.8-3.7-.6-5.4.3l-69 39.8-69-39.8c-1.6-.9-3.6-1.1-5.4-.3L43 110.3c-2.1.9-3.5 2.9-3.6 5.2-.1 2.3 1 4.4 3 5.5l72 41.6c.9.5 2 .8 3 .8.8 0 1.6-.2 2.4-.5l5.2-2.2 136.4 59.1 136.4-59.1 5.2 2.2c.8.3 1.6.5 2.4.5 1 0 2.1-.3 3-.8l72-41.6c2-1.1 3.1-3.3 3-5.5-.1-2.3-1.5-4.3-3.6-5.2zm-421 6.3L189 60.2l59.1 34.1-130.3 56.4-59-34.1zM405 150.7L274.8 94.3l59.1-34.1 130.3 56.4-59.2 34.1z"/>
+      <path class="cat" d="M330.9 127.9s-36.8 13.2-55.4 29.5c-4.4-.6-9.1-.8-13.8-.8-4.9 0-9.7.3-14.3.9-18.5-16.3-55.4-29.6-55.4-29.6s-.4 39 6.3 63.5c-1.9 5.4-2.9 11.4-2.9 18.1 0 36.6 29.7 41.5 66.3 41.5s66.3-4.9 66.3-41.5c0-7.1-1.1-13.5-3.2-19.1 6.5-24.5 6.1-62.5 6.1-62.5zm-96.2 80.8c-5.5 0-10-4.5-10-10s4.5-10 10-10 10 4.5 10 10-4.4 10-10 10zm27 20.5c-4.1 0-7.4-5.6-7.4-7.4 0-4.1 3.3-3.8 7.4-3.8 4.1 0 7.4-.3 7.4 3.8 0 1.8-3.3 7.4-7.4 7.4zm26.6-20.5c-5.5 0-10-4.5-10-10s4.5-10 10-10 10 4.5 10 10-4.5 10-10 10z"/>
+      <path class="st2" d="M189.4 267.3c-.8 0-1.6-.2-2.4-.5l-63.6-27.5v38.9l132 57.2V230.2l-63 36.4c-.9.5-1.9.7-3 .7z"/>
+      <path class="st4" d="M265.3 215.2c.1.1.2.2.3.2-.2-.1-.2-.2-.3-.2zM266.4 216.4c.1.1.1.2.2.3-.1-.1-.1-.2-.2-.3zM267.1 217.9c0 .1.1.3.1.4 0-.1 0-.3-.1-.4zM264.6 214.7c.1.1.2.1.2.2-.1-.1-.1-.2-.2-.2zM265.9 215.7c.1.1.2.2.2.3-.1-.1-.1-.2-.2-.3zM266.8 217.1c.1.1.1.2.2.4-.1-.1-.1-.2-.2-.4zM116 151.6c.1 0 .2-.1.3-.1-.1.1-.2.1-.3.1zM115.3 151.8c.1 0 .2-.1.3-.1-.1 0-.2.1-.3.1zM114.6 152.1c.1-.1.2-.1.3-.1-.1 0-.2.1-.3.1zM118.9 151.6c.1 0 .2 0 .3.1-.2-.1-.2-.1-.3-.1zM116.7 151.5h.3c-.1-.1-.2 0-.3 0zM117.4 151.4h.3-.3zM118.1 151.5h.3-.3zM263.8 214.3l-144-62.3h-.1.1l144 62.3zM248.1 220.5l-17.4-7.5 17.4 7.5zM267.3 218.7c0 .1 0 .3.1.4 0-.1 0-.2-.1-.4zM117.7 151.4h.4c-.1.1-.2 0-.4 0zM114.9 152c.1-.1.2-.1.4-.2-.1.1-.3.1-.4.2zM267 217.5c.1.1.1.3.2.4-.1-.1-.2-.3-.2-.4zM116.3 151.5c.1 0 .3 0 .4-.1-.1.1-.3.1-.4.1zM117 151.4h.4-.4zM118.4 151.5c.1 0 .3.1.4.1-.1 0-.2-.1-.4-.1zM115.6 151.7c.1 0 .2-.1.4-.1-.1 0-.3.1-.4.1zM267.4 219.4v-.3.3zM266.1 216c.1.1.2.2.3.4-.1-.1-.2-.2-.3-.4zM267.2 218.3c0 .1.1.3.1.4 0-.1 0-.3-.1-.4zM265.5 215.4c.1.1.2.2.4.3-.1-.1-.3-.2-.4-.3zM119.1 151.7c.2.1.4.1.6.2-.2-.1-.4-.2-.6-.2zM263.8 214.3c.3.1.5.3.8.4-.3-.2-.5-.3-.8-.4zM266.6 216.7c.1.1.2.3.2.4-.1-.1-.1-.2-.2-.4zM123.4 166.6L230.7 213zM264.8 214.8c.2.1.3.2.4.3-.1-.1-.2-.2-.4-.3z"/>
+      <path class="st2" d="M464.1 198.2l-52.7-30.4V221zM333.4 267.3c-1 0-2.1-.3-3-.8l-63-36.4v105.2l132-57.2v-38.9l-63.6 27.5c-.8.5-1.6.6-2.4.6z"/>
+      <path class="st2" d="M295.2 211.7l-20.4 8.8 59 34.1 65.6-28.4v-59.6z"/>
+      <path class="st4" d="M403.7 151.7c.1 0 .2 0 .3-.1-.1 0-.2 0-.3.1zM258 214.8c.1-.1.2-.1.2-.2 0 .1-.1.2-.2.2zM405.1 151.4h.3-.3zM405.8 151.4h.3c0 .1-.1 0-.3 0zM255.9 217.5c0-.1.1-.2.2-.4-.1.2-.2.3-.2.4zM406.6 151.5c.1 0 .2 0 .3.1-.1 0-.2 0-.3-.1zM255.6 218.3c0-.1.1-.3.1-.4 0 .1 0 .3-.1.4zM255.5 219.1c0-.1 0-.3.1-.4-.1.2-.1.3-.1.4zM256.3 216.7c.1-.1.1-.2.2-.3-.1.1-.2.2-.2.3zM256.7 216c.1-.1.1-.2.2-.3 0 .1-.1.2-.2.3zM257.3 215.4c.1-.1.2-.2.3-.2-.1 0-.2.1-.3.2zM404.4 151.5h.3-.3zM407.9 152c.1 0 .2.1.3.1-.1 0-.2-.1-.3-.1zM274.8 220.5l20.4-8.8zM403.1 151.9L259 214.3l144.1-62.4zM407.3 151.7c.1 0 .2.1.3.1-.1 0-.2-.1-.3-.1zM257 215.7c.1-.1.2-.2.4-.3-.2.1-.3.2-.4.3zM256.5 216.4c.1-.1.2-.3.3-.4-.1.2-.2.3-.3.4zM256 217.1c.1-.1.1-.3.2-.4 0 .2-.1.3-.2.4zM406.9 151.6c.1 0 .3.1.4.1-.2 0-.3-.1-.4-.1zM255.7 217.9c0-.1.1-.3.2-.4-.1.1-.1.3-.2.4zM255.5 218.7c0-.2.1-.3.1-.4 0 .1-.1.3-.1.4zM255.4 219.4v-.3c.1.1 0 .2 0 .3zM405.4 151.4h.4-.4zM404 151.6c.1 0 .3-.1.4-.1-.1 0-.3.1-.4.1zM257.6 215.2c.1-.1.3-.2.4-.3-.1 0-.3.1-.4.3zM406.2 151.5c.1 0 .3 0 .4.1-.2-.1-.3-.1-.4-.1zM407.6 151.8c.1 0 .3.1.4.2-.2-.1-.3-.1-.4-.2zM404.7 151.5h.4c-.1-.1-.2 0-.4 0zM403.1 151.9c.2-.1.4-.2.6-.2-.2 0-.4.1-.6.2zM258.3 214.7c.2-.1.5-.3.8-.4-.3.1-.6.2-.8.4zM399.4 166.6l-104.2 45.1 104.2-45.1z"/>
+      <path d="M480.4 193.8l-72-41.6c-.1 0-.1-.1-.2-.1-.1-.1-.2-.1-.3-.1-.1-.1-.2-.1-.4-.2-.1 0-.2-.1-.3-.1-.1 0-.3-.1-.4-.1-.1 0-.2-.1-.3-.1-.1 0-.3 0-.4-.1h-1.7c-.1 0-.3.1-.4.1-.1 0-.2 0-.3.1-.2.1-.4.1-.6.2h-.1l-141.6 61.3-141.6-61.3h-.1c-.2-.1-.4-.2-.6-.2-.1 0-.2 0-.3-.1-.1 0-.3-.1-.4-.1h-1.7c-.1 0-.3 0-.4.1-.1 0-.2 0-.3.1-.1 0-.3.1-.4.1-.1 0-.2.1-.3.1-.1 0-.2.1-.4.2-.1 0-.2.1-.3.1-.1 0-.1.1-.2.1l-72 41.6c-2 1.1-3.1 3.3-3 5.5.1 2.3 1.5 4.3 3.6 5.2l68.4 29.6v48c0 2.4 1.4 4.6 3.6 5.5L259 350c.2.1.4.2.6.2h.1c.2.1.4.1.6.1h.2c.3 0 .5.1.8.1s.5 0 .8-.1h.2c.2 0 .4-.1.6-.1h.2c.2-.1.4-.1.6-.2l144-62.3c2.2-1 3.6-3.1 3.6-5.5v-48l68.4-29.6c2.1-.9 3.5-2.9 3.6-5.2.2-2.3-.9-4.5-2.9-5.6zm-369 27.2l-52.7-22.8 52.7-30.4 6.4-3.7 5.6 2.4L230.7 213l17.4 7.5-59.1 34.1-65.6-28.4-12-5.2zm12 18.3l63.6 27.5c.8.3 1.6.5 2.4.5 1 0 2.1-.3 3-.8l63-36.4v105.2l-132-57.2v-38.8zm276 38.9l-132 57.2V230.2l63 36.4c.9.5 2 .8 3 .8.8 0 1.6-.2 2.4-.5l63.6-27.5v38.8zm12-57.2l-12 5.2-65.6 28.4-59.1-34.1 20.5-8.9 104.2-45.1 5.6-2.4 6.4 3.7 52.7 30.4-52.7 22.8z"/>
+      <path class="st9" d="M399.4 226.2l12-5.2 52.7-22.8-52.7-30.4-6.4-3.7-5.6 2.5-104.2 45.1-20.4 8.8 59 34.1zM189 254.6l59.1-34.1-17.4-7.5-107.3-46.4-5.6-2.5-6.4 3.7-52.6 30.4 52.6 22.8 12 5.2z"/>
+      <path class="st9" d="M399.4 239.3l-63.6 27.5c-.8.3-1.6.5-2.4.5-1 0-2.1-.3-3-.8l-63-36.4v105.2l132-57.2v-38.8zM189.4 267.3c-.8 0-1.6-.2-2.4-.5l-63.6-27.5v38.9l132 57.2V230.2l-63 36.4c-.9.5-1.9.7-3 .7z"/>
     </svg>
+    <h1>тесные киски</h1>
   </a>
-  <a class="pussy-link" href="https://tlinks.run/tightpussies"><h1>тесные киски</h1></a>
 </body>
-  
 </html>
