--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 </style>
 </head>
 <body>
-  <a href="https://tlinks.run/tightpussies">
+  <a href="https://t.me/tightpussies">
     <svg version="1.1" class="logo" xmlns="http://www.w3.org/2000/svg" x="0" y="0" viewBox="0 0 516 394.6" xml:space="preserve">
       <style>
         .st2{fill:none}.st4{fill:#1d1d1b}.st9,.cat{fill:#fff}
@@ -71,7 +71,7 @@
       <path class="st9" d="M399.4 226.2l12-5.2 52.7-22.8-52.7-30.4-6.4-3.7-5.6 2.5-104.2 45.1-20.4 8.8 59 34.1zM189 254.6l59.1-34.1-17.4-7.5-107.3-46.4-5.6-2.5-6.4 3.7-52.6 30.4 52.6 22.8 12 5.2z"/>
       <path class="st9" d="M399.4 239.3l-63.6 27.5c-.8.3-1.6.5-2.4.5-1 0-2.1-.3-3-.8l-63-36.4v105.2l132-57.2v-38.8zM189.4 267.3c-.8 0-1.6-.2-2.4-.5l-63.6-27.5v38.9l132 57.2V230.2l-63 36.4c-.9.5-1.9.7-3 .7z"/>
     </svg>
-    <h1>оставайтесь дома, киски</h1>
+    <h1>тесные киски</h1>
   </a>
 </body>
 </html>
