preload first visible images

--- a/index.html
+++ b/index.html
@@ -9,7 +9,14 @@
     <link rel="icon" type="image/png" sizes="32x32" href="./favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="./favicon-16x16.png">
     <link rel="icon" href="./favicon.ico" sizes="any">
-  </head>
+
+    <!-- Preload initial visible images -->
+    <link rel="preload" as="image" href="/images/thumbs/cat-1-250w.webp" imagesrcset="/images/thumbs/cat-1-250w.webp 1x, /images/thumbs/cat-1-500w.webp 2x">
+    <link rel="preload" as="image" href="/images/thumbs/cat-2-250w.webp" imagesrcset="/images/thumbs/cat-2-250w.webp 1x, /images/thumbs/cat-2-500w.webp 2x">
+    <link rel="preload" as="image" href="/images/thumbs/cat-40-250w.webp" imagesrcset="/images/thumbs/cat-3-250w.webp 1x, /images/thumbs/cat-3-500w.webp 2x">
+    <link rel="preload" as="image" href="/images/thumbs/cat-41-250w.webp" imagesrcset="/images/thumbs/cat-4-250w.webp 1x, /images/thumbs/cat-4-500w.webp 2x">
+    <link rel="preload" as="image" href="/images/thumbs/cat-75-250w.webp" imagesrcset="/images/thumbs/cat-4-250w.webp 1x, /images/thumbs/cat-4-500w.webp 2x">
+</head>
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
