--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en">
+<html lang="en" class="loading">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -18,6 +18,7 @@
     <link rel="preload" as="image" href="/images/thumbs/cat-75-250w.webp" imagesrcset="/images/thumbs/cat-75-250w.webp 1x, /images/thumbs/cat-75-500w.webp 2x">
 </head>
   <body>
+    <div id="loading-bar"></div>
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
